--- a/src/index.html
+++ b/src/index.html
@@ -12,66 +12,231 @@
     <!-- Яратган эгамга мингдан минг шукрлар булсин -->
     <div class="header">
       <div class="container">
-        <div class="header__top">
-          <div class="header__logo"></div>
-          <ul class='menu'>
-            <li><a href="#">Main</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Profile</a></li>
-          </ul>
-          <div class="header__phone">
-            <a class="header__phone-number" href="tel+544 3490 00000:">+544 3490 00000</a>
-            <div class="header__phone-text">Звони скорее!</div>
+        <div class="header__inner" style="background-image: url(./assets/img/bg.jpg);">
+          <div class="header__podlojka"></div>
+          <div class="header__content">
+            <div class="header__top">
+              <div class="header__top-box">
+                <div class="header__logo" style="background-image: url(./assets/img/logo.jpg);"></div>
+                <ul class='menu'>
+                  <li><a href="#">Main</a></li>
+                  <li><a href="#">Gallery</a></li>
+                  <li><a href="#">News</a></li>
+                  <li><a href="#">Profile</a></li>
+                </ul>
+              </div>
+              <div class="header__phone">
+                <a class="header__phone-number" href="tel+544 3490 00000:">+544 3490 00000</a>
+                <div class="header__phone-text">Звони скорее!</div>
+              </div>
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
+            </div>
+            <div class="header__bottom">
+              <div class="header__bottom-text">Найдено 349 котов</div>
+            </div>
           </div>
-        </div>
-        <div class="header__bottom">
-          <div class="header__bottom-text">Найдено 349 котов</div>
         </div>
       </div>
     </div>
     <div class="animals">
       <div class="container">
-        <div class="content__sortbox">
-          <div class="sortbox-text">Сортировать по:</div>
-          <div class="price__sortbox">
-            <div class="price__sortbox-text">Цене</div>  
-            <div class="price__arrow"></div>
-          </div>
-          <div class="old__sortbox">
-            <div class="old__sortbox-text">Цене</div>  
-            <div class="old__arrow">Возрасту</div>
-          </div>
-        </div>
         <div class="animals__inner">
-          <div class="animal__item">
-            <div class="animal__img-box">
-              <img class="animal__img"></img>
-              <div class="animal__sale">-40%</div>
-              <div class="animal__sale-heart"></div>
+          <div class="content__sortbox">
+            <div class="sortbox-text">Сортировать по:</div>
+            <div class="price__sortbox">
+              <div class="price__sortbox-text">Цене</div>  
+              <div class="price__arrow" style="background-image: url(/assets/img/arrow.svg);"></div>
             </div>
-            <div class="animal__infobox">
-              <div class="animal__name">Кот полосатый</div>
-              <div class="animal__pror-box">
-                <div class="animal__color">Коричневый окрас</div>
-                <div class="animal__old-box">
-                  <div class="animal__old">2 мес.</div>
-                  <div class="animal__old-text">Возраст</div>
-                </div>
-                <div class="animal__hand-box">
-                  <div class="animal__hand">4</div>
-                  <div class="animal__hand-text">Кол-во лап</div>
+            <div class="old__sortbox">
+              <div class="old__sortbox-text">Возрасту</div>  
+              <div class="price__arrow" style="background-image: url(/assets/img/arrow.svg);"></div>
+            </div>
+          </div>
+          <div class="animals__item-box">
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat2.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
                 </div>
               </div>
-              <div class="animal__price">30 000 руб</div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
             </div>
-            <a class="animal__link" href="#">Купить</a>
+
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat1.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
+                </div>
+              </div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
+            </div>
+
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat3.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
+                </div>
+              </div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
+            </div>
+
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat2.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
+                </div>
+              </div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
+            </div>
+
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat1.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
+                </div>
+              </div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
+            </div>
+
+            <div class="animal__item">
+              <div class="animal__img-box">
+                <img class="animal__img" src="/assets/img/catalog/cat3.jpg"></img>
+                <div class="animal__sale">-40%</div>
+                <div class="animal__sale-heart">
+                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
+                    </svg>
+                </div>
+              </div>
+              <div class="animal__infobox">
+                <div class="animal__name">Кот полосатый</div>
+                <div class="animal__pror-box">
+                  <div class="animal__color">Коричневый окрас</div>
+                  <div class="animal__old-box">
+                    <div class="animal__old">2 мес.</div>
+                    <div class="animal__old-text">Возраст</div>
+                  </div>
+                  <div class="animal__hand-box">
+                    <div class="animal__hand">4</div>
+                    <div class="animal__hand-text">Кол-во лап</div>
+                  </div>
+                </div>
+                <div class="animal__price">30 000 руб</div>
+              </div>
+              <div class="animal__link">Купить</div>
+            </div>
+          </div>
+          <div class="animals__list-link">Показать еще 20</div>
+          <div class="top__button-box">
+            <div class="top__button">
+              <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.29764 0.999386L0.287559 9.00962C0.102145 9.19488 -8.06437e-08 9.4422 -6.91167e-08 9.7059C-5.75898e-08 9.96961 0.102145 10.2169 0.287559 10.4022L0.87731 10.9921C1.2616 11.3759 1.88618 11.3759 2.26988 10.9921L8.99627 4.2657L15.7301 10.9996C15.9155 11.1848 16.1627 11.2871 16.4263 11.2871C16.6901 11.2871 16.9373 11.1848 17.1228 10.9995L17.7124 10.4097C17.8979 10.2242 18 9.97707 18 9.71337C18 9.44966 17.8979 9.20234 17.7124 9.01708L9.69504 0.999386C9.50904 0.813681 9.26071 0.711682 8.99671 0.712267C8.73169 0.711682 8.48349 0.813681 8.29764 0.999386Z" fill="white"/>
+              </svg>
+            </div>
           </div>
         </div>
-        <div class="animals__list-link">Показать еще 20</div>
-        <div class="top__button"></div>
       </div>
     </div>
+    
     <div class="footer">
       <div class="container">
         <div class="footer__inner">
@@ -80,13 +245,16 @@
             <div class="footer__content-comment">Подпишись и успей словить все акции</div>
           </div>
           <div class="footer__link-box">
-            <div class="form">
+            <form>
               <div class="email-box">
                 <input type="text" placeholder="Email" >
                 <button class="footer-btn">Подписаться</button>
               </div>
-              <input type="checkbox" name="news" class="news__checkbox" checked>
-            </div>
+              <label>
+                <input type="checkbox" name="news" class="news__checkbox" checked>
+                Подписаться на новости
+              </label>
+            </form>
           </div>
         </div>
       </div>
