--- a/src/index.html
+++ b/src/index.html
@@ -53,179 +53,13 @@
             </div>
             <div class="old__sortbox">
               <div class="old__sortbox-text">Возрасту</div>  
-              <div class="price__arrow" style="background-image: url(/assets/img/arrow.svg);"></div>
+              <div class="old__arrow" style="background-image: url(/assets/img/arrow.svg);"></div>
             </div>
           </div>
           <div class="animals__item-box">
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat2.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
-
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat1.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
-
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat3.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
-
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat2.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
-
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat1.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
-
-            <div class="animal__item">
-              <div class="animal__img-box">
-                <img class="animal__img" src="/assets/img/catalog/cat3.jpg"></img>
-                <div class="animal__sale">-40%</div>
-                <div class="animal__sale-heart">
-                  <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M33.7812 0.695312C31.2851 0.695312 28.9966 1.4863 26.9794 3.04634C25.0456 4.54197 23.758 6.44693 23 7.83214C22.242 6.44684 20.9544 4.54197 19.0206 3.04634C17.0034 1.4863 14.7149 0.695312 12.2188 0.695312C5.25298 0.695312 0 6.39293 0 13.9485C0 22.1112 6.55347 27.696 16.4746 36.1505C18.1593 37.5863 20.0689 39.2138 22.0538 40.9494C22.3154 41.1785 22.6514 41.3047 23 41.3047C23.3486 41.3047 23.6846 41.1785 23.9462 40.9495C25.9312 39.2136 27.8408 37.5862 29.5265 36.1496C39.4465 27.696 46 22.1112 46 13.9485C46 6.39293 40.747 0.695312 33.7812 0.695312Z" fill="white" fill-opacity="0.5"/>
-                    </svg>
-                </div>
-              </div>
-              <div class="animal__infobox">
-                <div class="animal__name">Кот полосатый</div>
-                <div class="animal__pror-box">
-                  <div class="animal__color">Коричневый окрас</div>
-                  <div class="animal__old-box">
-                    <div class="animal__old">2 мес.</div>
-                    <div class="animal__old-text">Возраст</div>
-                  </div>
-                  <div class="animal__hand-box">
-                    <div class="animal__hand">4</div>
-                    <div class="animal__hand-text">Кол-во лап</div>
-                  </div>
-                </div>
-                <div class="animal__price">30 000 руб</div>
-              </div>
-              <div class="animal__link">Купить</div>
-            </div>
+            
           </div>
-          <div class="animals__list-link">Показать еще 20</div>
+          <div class="animals__list-link">Показать еще 6</div>
           <div class="top__button-box">
             <div class="top__button">
               <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
